// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`возвращает полный набор параметров для бу легковых 1`] = `
Object {
  "availability": "На заказ",
  "beaten": "Битый / не на ходу",
  "customs": "Не растаможен",
  "steeringWheel": "Правый",
}
`;

exports[`возвращает полный набор параметров для новых легковых 1`] = `
Object {
  "availability": "В пути",
  "beaten": "Битый / не на ходу",
  "customs": "Не растаможен",
  "steeringWheel": "Правый",
}
`;
